@@ -29,6 +29,8 @@
 * When copying read-only files, the importer now tries to make the copy
   writable. (Previously, this would just crash the import.)
 * Fixed an UnboundLocalError when no matches are found during autotag.
+* Fixed a Unicode encoding error when entering special characters into
+  the "manual search" prompt.
 
 1.0b5
 -----
